# sports-trends

./: .env.example  .gitignore  404.md  Gemfile  LICENSE  Makefile  README.md  REPO_TREE.txt  _config.yml  package.json  pyproject.toml  requirements.txt  vercel.json
_layouts/: sports-league.html  sports-live.html  sports-match.html  sports-prediction.html  sports.html
docs/: DATA_SCHEMA.md  DEPLOYMENT.md  FEEDBACK_LOOP.md  GITHUB_ACTIONS.md  HF_DATASET_ARCHITECTURE.md  LEGAL_DISCLAIMER.md  ML_PIPELINE.md  ROADMAP.md  SEASONS.md  SEO_STRATEGY.md  WORLD_CUP.md
scripts/: deploy_to_ruslanmv_site.sh  preview_site.py  publish_hf_cards.py  run_build_training_dataset.py  run_fetch_raw_data.py  run_generate_features.py  run_generate_inference_window.py  run_generate_og_images.py  run_generate_pages.py  run_live_refresh.py  run_log_predictions.py  run_normalize_data.py  run_predict_tomorrow.py  run_publish_frontend_json.py  run_reconcile_outcomes.py  run_tomorrow_predictions.py  run_train_models.py  run_trending_rankings.py  run_upload_inference_window.py  run_upload_to_hf_dataset.py  run_validate_dataset.py  run_worldcup_pipeline.py  setup_github_secrets.sh  sync_to_site.sh  update_readme.py  validate_json.py
source_zip/: API_INTEGRATION_GUIDE.md  requirements.txt  sports_prediction_platform_plan.md
sports/: baseball.md  basketball.md  cricket.md  esports.md  football.md  index.md  legal.md  live.md  predictions.md  rankings.md  sitemap-sports.xml  tennis.md  tomorrow.md  trending.md
templates/: json-ld-match.j2  league-page.md.j2  match-page.md.j2  og-card.html.j2  (+2 more)
(+328 files in other folders)
