[project]
name = "ruslanmv-sports-intelligence"
version = "0.1.0"
description = "Sports intelligence automation for ruslanmv.com/sports"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.black]
line-length = 100
