[project]
name = "sports-trends"
version = "0.1.0"
description = "Sports intelligence automation for ruslanmv.com/sports"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
